// The greeting service definition.
syntax = "proto3";
import "google/api/annotations.proto";
package apis;
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            get: "/v1/hello"
        };
    }
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            get: "/v1/helloagain"
        };
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}